<resources>
    <string name="app_name">FukuiRecipe</string>
    <string name="toolBar_name">福井のレシピ</string>
    <string name="toolBar_setting">設定画面へ</string>
    <string name="toolBar_star">お気に入り</string>

    <string name="main_title">福井のレシピ</string>
    <string name="main_name">学籍番号(伏せ)   名前(伏せ)</string>
    <string name="main_btn1">「福井ふるさとの味」のレシピ</string>
    <string name="main_btn2">「ふく囲鍋」のレシピ</string>
    <string name="main_btn4">ふくい朝ごはんレシピ</string>
    <string name="main_btn5">南越米っ子コンクール応援作品</string>
    <string name="main_btn6">地場農作物を使ったレシピ</string>
    <string name="main_btn7">米料理レシピ</string>
    <string name="main_btn8">さといも料理レシピ</string>
    <string name="main_btn9">ジビエと奥越産食材を使ったレシピ</string>
    <string name="main_btn10">米粉レシピ</string>

    <string name="roc_tgl">ランダム選出</string>
    <string name="roc_go">実行</string>

    <string name="list_name">%s</string>

    <string name="detail_next">next</string>
    <string name="detail_prev">prev</string>
    <string name="detail_list">LIST</string>
    <string name="detail_rand">RAND</string>
    <string name="detail_title">%1$s</string>
    <string name="detail_materialAndQuantity">材料 : 数量</string>
    <string name="detail_procedure">手順</string>
    <string name="detail_other">その他</string>

    <string name="favo_top">お気に入り（１０件まで）</string>
</resources>
