<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity"
    android:orientation="vertical"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/detailToolBar"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            android:minHeight="?attr/actionBarSize"
            android:background="?attr/colorPrimary"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="20dp">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_gravity="center">

                <Button
                    android:id="@+id/detailList"
                    android:layout_height="80dp"
                    android:layout_width="wrap_content"
                    android:text="@string/detail_list"
                    android:layout_weight="1"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp"
                    android:onClick="clickList"/>
                <Button
                    android:id="@+id/detailPrev"
                    android:layout_height="80dp"
                    android:layout_width="wrap_content"
                    android:text="@string/detail_prev"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_weight="1"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp"
                    android:onClick="clickPrev"/>
                <Button
                    android:id="@+id/detailNext"
                    android:layout_height="80dp"
                    android:layout_width="wrap_content"
                    android:text="@string/detail_next"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_weight="1"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp"
                    android:onClick="clickNext"/>
                <Button
                    android:id="@+id/detailRand"
                    android:layout_height="80dp"
                    android:layout_width="wrap_content"
                    android:text="@string/detail_rand"
                    android:layout_weight="1"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp"
                    android:onClick="clickRand"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <TextView
                android:id="@+id/detailTitle"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/orange_700"
                android:text="@string/detail_title"
                android:gravity="center"
                android:layout_marginBottom="10dp"
                android:textSize="30sp"/>



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_materialAndQuantity"
                android:textSize="20sp"
                android:textColor="@color/orangeA_700"/>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/detailMaterialAndQuantityLayout"
                    android:layout_marginBottom="5dp"
                    android:orientation="vertical"
                    android:layout_weight="1"/>

                <ImageView
                    android:id="@+id/addFavoStar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:onClick="clickStar"
                    android:src="@drawable/baseline_star_border_black_48"
                    />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_procedure"
                android:textSize="20sp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:textColor="@color/orangeA_700"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/detailProcedureLayout"
                android:layout_marginBottom="5dp"
                android:orientation="vertical"/>

            <TextView
                android:id="@+id/detailOther"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_other"
                android:textSize="20sp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:textColor="@color/orangeA_700"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/detailOtherLayout"
                android:orientation="vertical"/>

            </LinearLayout>
    </LinearLayout>

</ScrollView>